# culture-dissemination-axelrod

./: README.md  pyproject.toml
culdisaxel/: __main__.py  draw.py  helpers.py  model.py
