[tool.poetry]
name = "culture-dissemination-axelrod"
version = "0.1.0"
description = "Simulator of culture dissemination based on Axelrod's Model"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
flake8-annotations = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
